// Vitest Snapshot v1

exports[`Todolist > should create an empty Todolist 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul />
    </div>
  </body>,
  "container": <div>
    <ul />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Todolist > should create an empty Todolist 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul>
        <li
          class="flex gap-5"
        >
          <input
            checked=""
            class="peer"
            type="checkbox"
          />
          <div
            class="peer-checked:line-through"
          >
            quo adipisci enim quam ut ab
          </div>
          <span
            class="material-icons-round cursor-pointer hover:!text-red-500"
          >
            delete
          </span>
        </li>
        <li
          class="flex gap-5"
        >
          <input
            checked=""
            class="peer"
            type="checkbox"
          />
          <div
            class="peer-checked:line-through"
          >
            molestiae perspiciatis ipsa
          </div>
          <span
            class="material-icons-round cursor-pointer hover:!text-red-500"
          >
            delete
          </span>
        </li>
        <li
          class="flex gap-5"
        >
          <input
            checked=""
            class="peer"
            type="checkbox"
          />
          <div
            class="peer-checked:line-through"
          >
            illo est ratione doloremque quia maiores aut
          </div>
          <span
            class="material-icons-round cursor-pointer hover:!text-red-500"
          >
            delete
          </span>
        </li>
        <li
          class="flex gap-5"
        >
          <input
            checked=""
            class="peer"
            type="checkbox"
          />
          <div
            class="peer-checked:line-through"
          >
            vero rerum temporibus dolor
          </div>
          <span
            class="material-icons-round cursor-pointer hover:!text-red-500"
          >
            delete
          </span>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul>
      <li
        class="flex gap-5"
      >
        <input
          checked=""
          class="peer"
          type="checkbox"
        />
        <div
          class="peer-checked:line-through"
        >
          quo adipisci enim quam ut ab
        </div>
        <span
          class="material-icons-round cursor-pointer hover:!text-red-500"
        >
          delete
        </span>
      </li>
      <li
        class="flex gap-5"
      >
        <input
          checked=""
          class="peer"
          type="checkbox"
        />
        <div
          class="peer-checked:line-through"
        >
          molestiae perspiciatis ipsa
        </div>
        <span
          class="material-icons-round cursor-pointer hover:!text-red-500"
        >
          delete
        </span>
      </li>
      <li
        class="flex gap-5"
      >
        <input
          checked=""
          class="peer"
          type="checkbox"
        />
        <div
          class="peer-checked:line-through"
        >
          illo est ratione doloremque quia maiores aut
        </div>
        <span
          class="material-icons-round cursor-pointer hover:!text-red-500"
        >
          delete
        </span>
      </li>
      <li
        class="flex gap-5"
      >
        <input
          checked=""
          class="peer"
          type="checkbox"
        />
        <div
          class="peer-checked:line-through"
        >
          vero rerum temporibus dolor
        </div>
        <span
          class="material-icons-round cursor-pointer hover:!text-red-500"
        >
          delete
        </span>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
